# agda-core

./: .gitignore  Makefile  README.md  Reduce.agda  Scope.agda  ScopeImpl.agda  ScopeTest.agda  Syntax.agda  TestReduce.agda  Utils.agda  agda-core.cabal  cabal.project  core.agda-lib  flake.nix  rewrite-rules.yml
.github/workflows/: agda-core-build.yml  flake-lock-update-not-nixpkgs.yml  flake-lock-update.yml  nix-ci.yml  typecheck.yml
Old/: ScopeAlt1.agda  ScopeAlt2.agda
app/: Conversion.hs  Main.hs
app/Agda/Core/: PrettyPrint.hs  ToCore.hs  UtilsH.hs
lib/: Reduce.hs  Scope.hs  Syntax.hs
lib/Scope/: All.hs  Core.hs  In.hs  Split.hs  Sub.hs
lib/Utils/: All.hs  Dec.hs  Erase.hs  List.hs
nix/: agda-core.diff  agda-core.nix  mkAgdaDerivation.nix
src/: Context.agda  Conversion.agda  GlobalScope.agda  Reduce.agda  Scope.agda  ScopeTest.agda  Substitute.agda  Syntax.agda  TestReduce.agda  Typechecker.agda  Typing.agda  Utils.agda
src/Agda/: Core.agda
src/Agda/Core/: Context.agda  Conversion.agda  Converter.agda  GlobalScope.agda  Name.agda  Notations.md  Prelude.agda  Reduce.agda  ScopeUtils.agda  Signature.agda  Substitute.agda  Syntax.agda  TCM.agda  TCMInstances.agda  TestEtaRecordsUnit.agda  TestEtaRecordsUnitTyped.agda  TestEtaRecordsUnitUntyped.agda  TestProjection.agda  TestReduce.agda  TestTypeCheck.agda  Tests.agda  Typechecker.agda  Typing.agda  Unification.agda  Unifier.agda  Utils.agda  test1_sub_error_message.txt
src/Agda/Core/Checkers/: Converter.agda  ConverterUtils.agda  Terminate.agda  Terminate2.agda  TerminateFind.agda  TypeCheck.agda  TypedConverter.agda  Unifier.agda
src/Agda/Core/Checkers/Typed/: TypeCheck.agda
src/Agda/Core/Checkers/Untyped/: Converter.agda  TypeCheck.agda
src/Agda/Core/Conversion/: Converter.agda  Reduce.agda  Rules.agda
src/Agda/Core/Reduction/: Reduce.agda
src/Agda/Core/Rules/: Conversion.agda  ConversionUtils.agda  Terminating.agda  Terminating2.agda  TypedConversion.agda  Typing.agda  Unification.agda
src/Agda/Core/Rules/Typed/: Typing.agda
src/Agda/Core/Rules/Untyped/: Conversion.agda  Typing.agda
src/Agda/Core/Syntax/: Context.agda  Signature.agda  Strengthening.agda  Substitute.agda  Term.agda  TerminationUtils.agda  VarInTerm.agda  Weakening.agda
src/Agda/Core/TCM/: Instances.agda  TCM.agda
src/Agda/Core/TypeChecker/Checkers/: Converter.agda  TypeCheck.agda  Unifier.agda
src/Agda/Core/TypeChecker/Rules/: Conversion.agda  Typing.agda  Unification.agda
src/Agda/Core/Typing/: Rules.agda  Typechecker.agda
src/Agda/Core/Unification/: Rules.agda  Unifier.agda
src/Scope/: All.agda  Core.agda  Diff.agda  In.agda  Split.agda  Sub.agda
src/Utils/: Dec.agda  Either.agda  Erase.agda  Fuel.agda  List.agda  Misc.agda  Tactics.agda
test/: DependentDatatypes.agda  EtaExampleNathaniel.agda  EtaFunctions.agda  EtaFunctionsChurch.agda  EtaFunctionsChurchWithConst.agda  EtaFunctionsExplConst.agda  EtaFunctionsExplDefArg.agda  EtaFunctionsExplEquiv.agda  EtaFunctionsNoCrash.agda  EtaRecords.agda  EtaRecordsUnit.agda  EtaUnit.agda  Implicit.agda  One.agda  PatternMatch.agda  RecordProjection.agda  RecordProjectionTestsTwo.agda  Records.agda  RewriteExample.agda  SigmaRecord.agda  SimpleDatatypes.agda  TRecTypechecking.agda  UnitTypeChurch.agda  UseListAndVector.agda  Zero.agda  dependantDatatypes.agda  one.agda  records.agda  simpleDatatypes.agda  temp.agda  zero.agda
