cabal-version:      3.0
name:               agda-core
version:            0.1.0.0
-- synopsis:
-- description:
license:            Unlicense
license-file:       LICENSE
author:             Jesper Cockx, Lucas Escot
maintainer:         jesper@sikanda.be, lucas@escot.me
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:
      -Wall
      -fno-warn-unused-matches
      -fno-warn-unused-imports
      -fno-warn-unused-local-binds

library
    import:           warnings
    exposed-modules:  Agda.Core.Context
                    , Agda.Core.Conversion
                    , Agda.Core.Converter
                    , Agda.Core.GlobalScope
                    , Agda.Core.Reduce
                    , Agda.Core.Signature
                    , Agda.Core.Substitute
                    , Agda.Core.Syntax
                    , Agda.Core.TCM
                    , Agda.Core.TCMInstances
                    , Agda.Core.Typechecker
                    , Agda.Core.Typing
                    , Agda.Core.Utils
                    , Scope.All
                    , Scope.Core
                    , Scope.Diff
                    , Scope.In
                    , Scope.Reverse
                    , Scope.Split
                    , Scope.Sub
                    , Utils.Either
                    , Utils.List
    build-depends:    base   >= 4.17    && < 4.20
    hs-source-dirs:   lib
    default-language: GHC2021

    ghc-options:
      -- agda2hs generates many (safe) incomplete patterns
      -fno-warn-incomplete-patterns
      -fno-warn-name-shadowing

executable agda-core
    import:           warnings
    hs-source-dirs:   app
    default-language: GHC2021
    main-is:          Main.hs
    other-modules:    Agda.Core.ToCore
                    , Paths_agda_core
    autogen-modules:  Paths_agda_core
    default-extensions:
      LambdaCase
      RecordWildCards
      MultiWayIf
      BlockArguments
      ViewPatterns
      DerivingStrategies
    build-depends:
        base                 >= 4.17    && < 4.20,
        Agda                 >= 2.6.4   && < 2.6.5,
        bytestring           >= 0.11.5  && < 0.13,
        containers           >= 0.6     && < 0.8,
        unordered-containers >= 0.2.19  && < 0.3,
        mtl                  >= 2.2.2   && < 2.4,
        directory            >= 1.2.6.2 && < 1.4,
        filepath             >= 1.4.1.0 && < 1.5,
        agda-core,

